--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-html5video": "^2.5.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
